# racing-ml-simulator

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README-en.md  README.md  train.json
maps/: map1.json  map1_chicanes_infernais.json  map2_chicanes.json  map3_tecnico.json  map4_obstaculos.json  map5_tecnico_avancado.json  map6.json  map6_chicanes_infernais.json  map7_pesadelo.json  map8_caos_total.json
src/: AIController.h  Car.cpp  Car.h  Game.cpp  Game.h  GeneticAlgorithm.cpp  GeneticAlgorithm.h  HumanController.cpp  HumanController.h  NeuralNetwork.cpp  NeuralNetwork.h  Renderer.cpp  Renderer.h  Sensor.cpp  Sensor.h  Track.cpp  Track.h  Trainer.h  Trainers.cpp  Trainers.h  Training.cpp  Training.h  TrainingMath.cpp  TrainingMath.h  main.cpp
src/app/: Runners.cpp  Runners.h
src/cli/: AppConfig.cpp  AppConfig.h  ArgParser.cpp  ArgParser.h  CliOptions.h  Usage.cpp  Usage.h  Util.cpp  Util.h
src/control/: HumanController.cpp  HumanController.h  NeuralNetwork.cpp  NeuralNetwork.h
src/core/: Constants.h  TrackGen.cpp  TrackGen.h  Types.h  Vec2.h
src/render/: InteractiveLoop.cpp  InteractiveLoop.h  Renderer.cpp  Renderer.h
src/sim/: Car.cpp  Car.h  Game.cpp  Game.h  Sensor.cpp  Track.cpp  Track.h  TrackGen.cpp  TrackGen.h
src/training/: GeneticAlgorithm.cpp  GeneticAlgorithm.h  Trainers.cpp  Trainers.h  Training.cpp  Training.h  TrainingMath.cpp  TrainingMath.h
tests/: test_main.cpp
tests/fixtures/: oval.json
tools/: check_map_overlap.py  watch_training.py
